<resources>
    <string name="app_name">eLit</string>
    <string name="logo_elit">eLit logo</string>
    <string name="nav_books">Books</string>
    <string name="nav_fav">Favorites</string>
    <string name="nav_acc">Account</string>
    <string name="text_for_login_welcome">Welcome,</string>
    <string name="text_for_login_next">Sign in to continue</string>
    <string name="text_for_register_create">Create Account,</string>
    <string name="text_for_register_new_acc">Sign up for \ncreate a new account</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="text_fullname">Full Name</string>
    <string name="text_email">Email</string>
    <string name="text_phone">Phone Number</string>
    <string name="text_username">Username</string>
    <string name="text_password">Password</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_btn_login">Sign In</string>
    <string name="text_btn_register">Register</string>
    <string name="text_btn_create_new_acc">Create New Account</string>
    <string name="line_text">OR</string>
    <string name="text_forgot_pass"><u>Forgot Password?</u></string>
    <string name="text_have_acc"><u>Already have an account?</u></string>
    <string name="alert_fullname">Full Name is required</string>
    <string name="alert_email">Email required</string>
    <string name="alert_phone">Phone Number is required</string>
    <string name="alert_username">Username required</string>
    <string name="alert_password">Password required</string>
    <string name="alert_confirm_password">Password confirmation required</string>
    <string name="alert_password_not_match">Passwords do not match</string>
    <string name="alert_valid_email">Invalid email</string>
    <string name="alert_valid_phone">Invalid Phone Number</string>
    <string name="error_pass_char">Password must be at least 8 characters long</string>
    <string name="toast_registration_failed">Failed to create account</string>
    <string name="toast_registration_success">Successfully created account</string>
    <string name="email_already_registered">Email already registered</string>
    <string name="username_already_registered">Username already registered</string>
    <string name="phone_already_registered">Phone number already registered</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search for the title of the novel. . .</string>
    <string name="image_slider">Image Slider</string>
    <string name="recommend_novel">Recommendation ✨</string>
    <string name="tv_more">others</string>
    <string name="image_cover_recommend">Recommendation Cover</string>
    <string name="item_image">Item Image</string>
    <string name="title_of_book">Title of Book</string>
    <string name="author_of_book">Author of Book</string>
    <string name="fav_novel">Liked novels</string>
    <string name="tv_select_image">Select Image</string>
    <string name="tv_book_title">Book Title</string>
    <string name="tv_book_author">Author</string>
    <string name="tv_book_desc">Description</string>
    <string name="iv_books_image">Book Images</string>
    <string name="tv_upload_book">Upload Books</string>
    <string name="login_failed">Login failed</string>
    <string name="password_doesnt_match">Passwords do not match</string>
    <string name="image_null">Image not selected</string>
    <string name="btn_download_book">Download Books</string>
    <string name="content_fav">Favourites</string>
    <string name="upload_book">Upload Book</string>
    <string name="icon_back">Icon Back</string>
    <string name="detail_book">Book Details</string>
    <string name="no_data">Empty Data</string>
    <string name="failed_to_get_data">Failed to fetch data</string>
    <string name="genre_horror">Horror</string>
    <string name="tv_book_genre">Genre</string>
    <string name="genre_of_book">Genre of Book</string>
    <string name="image_cover_romance">Genre Romance</string>
    <string name="genre_romance">Romance 💕</string>
    <string name="select_genre">Select Genres</string>
    <string name="select_pdf">Select PDF</string>
    <string name="filename_pdf">PDF File Name</string>
    <string name="no_fav_books">Empty Book Favorites</string>
    <string name="success_remove_from_fav">Successfully removed from Favorites</string>
    <string name="failed_remove_from_fav">Failed to remove from Favorites</string>
    <string name="success_add_to_fav">Successfully added to Favorites</string>
    <string name="failed_add_to_fav">Failed to add to Favorites</string>
    <string name="failed_to_check_fav">Failed to check Favorites</string>
    <string name="please_select_pdf">Please select a PDF first</string>
    <string name="upload_success">Uploading Success</string>
    <string name="upload_failed">Upload Failed</string>
    <string name="icon_logout">Logout</string>
    <string name="no_user">Not Logged in</string>
    <string name="fill_the_form">Fill in the blanks!</string>
    <string name="genre_fiction">Fiction 💭</string>
    <string name="image_cover_fiction">Genre Fiction</string>
    <string name="name_of_user">User Name</string>
    <string name="change_password">Change Password</string>
    <string name="update_profile">Update Profile</string>
    <string name="logout">Sign Out</string>
    <string name="text_btn_update_now">Update Now</string>
    <string name="good_morning">Good Morning,</string>
    <string name="good_afternoon">Good Afternoon,</string>
    <string name="good_evening">Good Afternoon,</string>
    <string name="good_night">Goodnight,</string>
    <string name="greeting">Hello,</string>
    <string name="profile_has_been_updated">Profile has been updated</string>
    <string name="failed_to_update_profile">Profile update failed</string>
    <string name="text_btn_update_password">Update Password</string>
    <string name="text_old_password">Old Password</string>
    <string name="text_new_password">New Password</string>
    <string name="password_has_been_updated">Password updated successfully</string>
    <string name="password_failed_to_updated">Password failed to update</string>
    <string name="old_password_not_match">"Old passwords entered do not match"</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="text_next">Next</string>
    <string name="description_username_forgot_password">Enter your username and proceed to get your account back</string>
    <string name="image_reload_password">Image Reload Password</string>
    <string name="username_not_found">Username not found</string>
    <string name="alert_old_password">Old password required</string>
    <string name="alert_new_password">New password required</string>
    <string name="failed_to_load_data">Failed to load data</string>
    <string name="text_edit">Edit</string>
    <string name="text_admin">Admin</string>
    <string name="text_list_book">Books</string>
    <string name="nav_add_books">Add Books</string>
    <string name="title_activity_update_delete">UpdateDeleteActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="text_delete">Delete</string>
    <string name="book_updated">Book has been updated</string>
    <string name="fiction">Fiction</string>
    <string name="romance">Romance</string>
    <string name="religion">Religion</string>
    <string name="book_deleted">Book deleted successfully</string>
    <string name="error_upload_pdf">Failed to upload pdf</string>
    <string name="error_upload_image">Failed to upload image</string>
    <string name="phone_not_found">Phone number not found</string>
    <string name="description_otp">A verification code has been sent to the number\n<b>%phone</b>\nPlease check your inbox and enter the code on the verification page.</string>
    <string name="resend_otp">%resend_otp</string>
    <string name="tv_resend_otp">Resend OTP</string>
    <string name="text_0">0</string>
    <string name="otp_sent">OTP sent</string>
    <string name="string_ex_phone">88888888888</string>
    <string name="description_input_phone_number">Enter an active phone number to receive OTP code</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_otp_code">Verify OTP Code</string>
    <string name="country_code_indonesia">+62</string>
    <string name="not_receive_otp">Not receiving OTP?</string>
    <string name="translate">Translate</string>
    <string name="choose_language">Choose Language</string>
    <string name="cancel">Cancel</string>
    <string name="change_language">Change Language</string>
    <string name="synopsis">Synopsis</string>
    <string name="downloading">Downloading . . .</string>
    <string name="nullable">null</string>
    <string name="username_doesnt_match">Username do not match</string>
    <string name="version">Version</string>
</resources>