<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.UpdateDeleteBookActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/second_color">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-15dp"
            style="@style/CustomToolbar"
            app:layout_scrollFlags="scroll|enterAlways">

            <ImageView
                android:id="@+id/iv_back_toolbar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/left_arrow"
                android:layout_gravity="start"
                android:contentDescription="@string/icon_back"
                android:padding="10dp"
                app:tint="@color/white"/>

            <TextView
                android:id="@+id/tv_title_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_edit"
                style="@style/CustomTitleToolbar"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="135dp"
                android:layout_height="200dp"
                style="@style/customCardView">

                <ImageView
                    android:id="@+id/image_books"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/iv_books_image"
                    tools:srcCompat="@tools:sample/avatars"/>
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_pdf"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:textAlignment="center"
                    android:text="@string/filename_pdf"
                    android:textColor="@color/colorHint"
                    android:fontFamily="@font/inter_regular"
                    android:textSize="14sp"
                    android:maxLines="4"
                    android:layout_gravity="center"/>
                <Button
                    android:id="@+id/btn_select_pdf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/select_pdf"
                    style="@style/CustomButton"/>
                <Button
                    android:id="@+id/btn_select_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/tv_select_image"
                    style="@style/CustomButton"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@+id/image_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tv_book_title"
                app:startIconDrawable="@drawable/ic_title"
                app:startIconTint="@color/second_color"
                style="@style/customTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_book_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    style="@style/customTextInputEditText"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_book_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tv_book_author"
                android:layout_marginTop="10dp"
                app:startIconDrawable="@drawable/ic_author"
                app:startIconTint="@color/second_color"
                style="@style/customTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_book_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    style="@style/customTextInputEditText"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_book_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tv_book_desc"
                android:layout_marginTop="10dp"
                app:startIconDrawable="@drawable/ic_desc"
                app:startIconTint="@color/second_color"
                style="@style/customTextInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_book_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    style="@style/customTextInputEditText"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_book_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_genre"
                android:layout_marginTop="10dp"
                app:startIconDrawable="@drawable/ic_genre"
                app:startIconTint="@color/second_color"
                style="@style/customTextInputLayoutDropDown">

                <AutoCompleteTextView
                    android:id="@+id/et_book_genre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    style="@style/customTextInputEditText"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.android.elit.ui.customview.ButtonUpdate
                android:id="@+id/btn_update_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                style="@style/CustomButton"/>
            <com.android.elit.ui.customview.ButtonDelete
                android:id="@+id/btn_delete_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/CustomButton"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>