<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AccountFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/second_color">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-15dp"
            style="@style/CustomToolbar"
            app:layout_scrollFlags="scroll|enterAlways">

            <ImageView
                android:id="@+id/iv_back_toolbar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/left_arrow"
                android:layout_gravity="start"
                android:contentDescription="@string/icon_back"
                android:padding="10dp"
                app:tint="@color/white"/>

            <TextView
                android:id="@+id/tv_title_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nav_acc"
                style="@style/CustomTitleToolbar"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/app_bar_layout">

        <LinearLayout
            android:id="@+id/ll_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvGreeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/good_morning"
                android:textSize="14sp"
                android:fontFamily="@font/inter_medium"
                android:textColor="@color/text_color"/>
            <TextView
                android:id="@+id/tvNameOfUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_of_user"
                android:textSize="18sp"
                android:fontFamily="@font/inter_extra_bold"
                android:textColor="@color/text_color"/>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            style="@style/customCardView"
            app:layout_constraintTop_toBottomOf="@+id/ll_user_info">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/black"/>
                <TextView
                    android:id="@+id/tvUpdateProfile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/update_profile"
                    android:gravity="start|center_vertical"
                    android:padding="10dp"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="14sp"
                    android:textColor="@color/text_color"
                    android:drawablePadding="10dp"
                    app:drawableLeftCompat="@drawable/ic_acc"
                    app:drawableTint="@color/black" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/black"/>
                <TextView
                    android:id="@+id/tvChangePassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/change_password"
                    android:gravity="start|center_vertical"
                    android:padding="10dp"
                    android:fontFamily="@font/inter_medium"
                    android:textSize="14sp"
                    android:textColor="@color/text_color"
                    android:drawablePadding="10dp"
                    app:drawableLeftCompat="@drawable/ic_pass"
                    app:drawableTint="@color/black" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/black"/>

                <Button
                    android:id="@+id/btnLogout"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/logout"
                    android:layout_gravity="center"
                    android:gravity="center_vertical|center_horizontal"
                    android:layout_marginTop="50dp"
                    android:textColor="@color/second_color"
                    android:textAllCaps="false"
                    android:textSize="14sp"
                    android:fontFamily="@font/inter_medium"
                    android:background="@drawable/button_logout"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>