<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="115dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20dp"
    android:id="@+id/item_book">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_image"
        android:layout_width="115dp"
        android:layout_height="165dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:background="@color/grey"
            android:contentDescription="@string/item_image"
            tools:src="@tools:sample/backgrounds/scenic"/>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cv_item_image"
        android:orientation="vertical"
        android:padding="2dp">

        <TextView
            android:id="@+id/item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_of_book"
            style="@style/TitleBook"/>
        <TextView
            android:id="@+id/item_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/author_of_book"
            style="@style/AuthorBook"/>
        <TextView
            android:id="@+id/item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/hiddenData"/>
        <TextView
            android:id="@+id/item_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/hiddenData"/>
        <TextView
            android:id="@+id/item_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/hiddenData"/>
        <TextView
            android:id="@+id/item_pdf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/hiddenData"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>